Updated IntelliJ config