@@ -1,14 +1,20 @@
 -server
--ea
 -Xss4m
--Xms2G
+-Xms1G
 -Xmx8G
 -XX:ReservedCodeCacheSize=1024m
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=120
+-ea
+-XX:CICompilerCount=2
+-Dsun.io.useCanonPrefixCache=false
 -Djava.net.preferIPv4Stack=true
 -Djdk.http.auth.tunneling.disabledSchemes=""
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
--Dawt.useSystemAAFontSettings=on
+-Djdk.attach.allowAttachSelf=true
+-Dkotlinx.coroutines.debug=off
+-Djdk.module.illegalAccess.silent=true
+-Dawt.useSystemAAFontSettings=lcd
 -Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-Dsun.tools.attach.tmp.only=true
